
 * PredictorMfeRNAup :
   * mfeInteraction base pairs now updated instead of recreation (reduced memory
     allocation events) 
 - PredictorRNAup.* : renamed to PredictorMfeRNAup.*
 + PredictorMfeRNAup.* : rename to be class name conform
 * Makefile.am : adaption to file rename
 * intaRNA : 
   + call CommandLineParsing.getPredictor() to get predictor
 * CommandLineParsing :
   + getPredictor() : generates the predictor according to the user request

160930 Martin Mann :
 * InteractionEnergyVrna :
   * getDangling*() : bugfix : dangling sequence code was not given
 * ReverseAccessibility :
   + getReversedIndex() : get index in reversed sequence
 * Interaction :
   + energy + get/set() : optional energy value for the interaction (init NaN)
 * Predictor :
   * output non-const
   * constructor :
     * output non-const (otherwise no filling possible)
   + predict() : triggers prediction
 - PredictorRNAup : renamed PredictorMfeRNAup
 + PredictorMfeRNAup :
   + mfeInteraction : holds the mfe interaction
   - hybridEmin : now part of mfeInteraction
   + initMfe() : initializes mfe and mfe interaction
   + updateMfe() : updated mfe and mfe interaction
   * fillHybridE() :
     * global temp variables to reduce allocation effort
     + dangling end contribution added
   * constructor() : only initializes data structures, no computation triggered
   + predict() : does the computation and output reporting
   + clear() : clears temporary data structures
   * destructor() : calls now only clear()
   + i1offset : the offset for the first sequence for index handling
   + i2offset : the offset for the second sequence for index handling
 * OutputHandlerText :
   + add() : 
     + prints interaction energy
 * RnaSequence
   + last : placeholder to represent the last position within a sequence
 * intaRNA :
   * calls predictor->predict()
 * AccessibilityVrna :
   * calc_ensemble_free_energy() 
     * input check preprocessor defines corrected

160929 Martin Mann :