@@ -20,6 +20,7 @@
 #include "InteractionEnergyVrna.h"
 
 #include "PredictorMfeRNAup.h"
+#include "PredictorMaxProb.h"
 
 #include "OutputHandlerText.h"
 
@@ -664,6 +665,7 @@ getPredictor( const InteractionEnergy & energy, OutputHandler & output ) const
 {
 	// TODO add according arguments and parsing
 	return new PredictorMfeRNAup( energy, output );
+//	return new PredictorMaxProb( energy, output );
 }
 
 ////////////////////////////////////////////////////////////////////////////
