@@ -1,4 +1,12 @@
 
+160930 Martin Mann :
+ * InteractionEnergy* :
+   + getRT() : provides the RT constant for this energy model to compute
+     Boltzmann weights
+ + PredictorMaxProb : computes the interaction site with maximal probability
+   and reports the according boundaries and the site's ensemble energy to the
+   output handler 
+160930 Martin Mann :
  * PredictorMfeRNAup :
    * mfeInteraction base pairs now updated instead of recreation (reduced memory
      allocation events) 
@@ -9,7 +17,6 @@
    + call CommandLineParsing.getPredictor() to get predictor
  * CommandLineParsing :
    + getPredictor() : generates the predictor according to the user request
-
 160930 Martin Mann :
  * InteractionEnergyVrna :
    * getDangling*() : bugfix : dangling sequence code was not given
